network-policy/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-allowed
  labels:
    app: allowed
spec:
  containers:
  - name: busybox-allowed
    image: busybox
    command:
      - sleep
      - "3600"
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-unallowed
  labels:
    app: unallowed
spec:
  containers:
  - name: busybox-unallowed
    image: busybox
    command:
      - sleep
      - "3600"
